fix issue with line breaks in tickets

--- a/src/screens/TicketsPage/components/Chat/Message/styles.scss
+++ b/src/screens/TicketsPage/components/Chat/Message/styles.scss
@@ -45,6 +45,7 @@
     //}
     .new-line {
       display: block;
+      min-height: 12px;
     }
   }
 
